--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,14 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+        
+        <!-- json exception writing -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <prerequisites>
         <maven>3.2.2</maven>
